--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,10 @@ jobs:
            uses: actions/checkout@v3
 
          - name: Setup JDK 17
-           uses: actions/setup-java@v3
-           with: 
-              distribution: 'oracle'
-	      java-version: 17.0.9
+         - uses: actions/setup-java@v3
+            with:
+               distribution: 'oracle' # See 'Supported distributions' for available options
+               java-version: '17'
 
          - name: Maven
            run: mvn -B test --file pom.xml
