--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
            uses: actions/checkout@v3
 
          - name: Setup JDK 17
-         - uses: actions/setup-java@v3
+           uses: actions/setup-java@v3
             with:
                distribution: 'oracle' # See 'Supported distributions' for available options
                java-version: '17'
