--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,9 +15,10 @@ jobs:
 
          - name: Setup JDK 17
            uses: actions/setup-java@v3
-            with:
-               distribution: 'oracle' # See 'Supported distributions' for available options
-               java-version: '17'
+           with:
+              java-version: '17'
+              distribution: 'oracle'
+              architecture: x64
 
          - name: Maven
            run: mvn -B test --file pom.xml
