--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 jobs:
    build-deploy:
       name: Buid and Run Tests
-      runs-on: ubunto-latest
+      runs-on: ubuntu-latest
       steps:
          - name: Checkout code
            uses: actions/checkout@v3
