--- a/.github/workflows/.gitlab-ci.yml
+++ b/.github/workflows/.gitlab-ci.yml
@@ -1,4 +1,10 @@
+name: Build & Run Tests
 
+on:
+   push:
+      branches:
+         - main
+         
 image: markhobson/maven-chrome:jdk-17
 stages:
   - test
