--- a/.github/workflows/.gitlab-ci.yml
+++ b/.github/workflows/.gitlab-ci.yml
@@ -6,6 +6,10 @@ on:
          - main
 jobs:
    build-deploy:
+
+      steps:
+         - name: Checkout code
+           uses: actions/checkout@v3
          
 image: markhobson/maven-chrome:jdk-17
 stages:
