--- a/.github/workflows/.gitlab-ci.yml
+++ b/.github/workflows/.gitlab-ci.yml
@@ -4,21 +4,23 @@ on:
    push:
       branches:
          - main
+
 jobs:
    build-deploy:
-
+      name: Buid and Run Tests
+      runs-on: ubuntu-latest
       steps:
          - name: Checkout code
            uses: actions/checkout@v3
-         
-image: markhobson/maven-chrome:jdk-17
-stages:
-  - test
-variables:
-  MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
 
+         - name: Setup JDK 17
+           uses: actions/setup-java@v3
+           with:
+              java-version: '17'
+              distribution: 'oracle'
+              architecture: x64
 
-testting selenium :
-  stage: test
-  script:
-    - mvn clean test
+         - name: Buid app
+           run: |
+              mvn clean install
+              mvn clean test
